# log-anomaly-detection

./: .gitignore  .pylintrc  LANL_data_processing.ipynb  README.md  Test_code.ipynb  eval_model.py  example_char_config.json  example_config.json  makefile  parse_log.py  requirements.txt  setup.cfg  setup.py  tox.ini  train.sh  train_model.py
config/: config_trainer.json  lanl_char_config_data.json  lanl_char_config_model.json  lanl_char_config_model_tiered.json  lanl_char_config_trainer.json  lanl_char_config_transformer.json  lanl_config_logline-transformer.json  lanl_config_lstm.json  lanl_config_lstm_char.json  lanl_config_lstm_word.json  lanl_config_multiline-transformer.json  lanl_config_tiered-lstm.json  lanl_config_tiered-lstm_char.json  lanl_config_tiered-lstm_word.json  lanl_config_tiered-transformer.json  lanl_config_tiered-transformer_char.json  lanl_config_tiered-transformer_word.json  lanl_config_trainer.json  lanl_config_transformer.json  lanl_config_transformer_char.json  lanl_config_transformer_word.json  lanl_word_config_data.json  lanl_word_config_model.json  lanl_word_config_model_tiered.json  lanl_word_config_trainer.json  lanl_word_config_transformer.json  lanl_word_config_transformer_tiered.json
data/: counts678.json  placeholder.txt  users678.json  vocab_field_cutoff=40.json  vocab_global_cutoff=40.json
doc/: LSTM.odp
log_analyzer/: application.py  eval_model.py  evaluator.py  helper_functions.py  tiered_trainer.py  train_loop.py  train_model.py  trainer.py
notebooks/: LANL_data_processing.ipynb  Test_code(Dataloader+LSTM+Training+loop).ipynb  Test_code.ipynb  train_model.ipynb
scripts/: create_test_data.py  evaluate_models.py  split_days.py
test/: conftest.py  (+12 more)
(+64 files in other folders)
