[metadata]
name = log_analyzer
version = 0.0.1

[options.entry_points]
console_scripts =
    train-model = log_analyzer.train_model:main
	process-auth = log_analyzer.data.log_file_utils:process_file
	generate-counts = log_analyzer.data.log_file_utils:generate_counts
	generate-vocab = log_analyzer.data.log_file_utils:generate_vocab_from_counts
	count-users = log_analyzer.data.log_file_utils:count_users

[options]
packages = find:
where = log_analyzer
install_requires =
    numpy >= 1.22.3
	pandas >= 1.2.4
	tensorboard >= 1.15.0
	dask >= 2021.4.1
	tqdm >= 4.59.0
	scipy >= 1.6.2
	scikit-learn >=0.24.2
	jupyter >= 1.0.0
	ipython >= 7.22.0
	pytest >= 6.2.3
	scikit-learn >= 0.24.2
	wandb >= 0.12.0
	autopep8 >= 1.5.6
	torch >= 1.9.1
	matplotlib >= 3.3.4

[mypy]
python_version = 3.8
ignore_missing_imports = True


[pycodestyle]
max_line_length = 120